# algo-terminal

./: .gitignore  README.md  oms.spec  project_structure.txt  pyproject.toml  readme.md  setup.py
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  requirements.txt  starship.toml
.github/workflows/: ci-audit.yml
QAOMS-master/: CHANGELOG.md  QAOMS.spec
QAOMS-master/Tests/: test_trades.py
QAOMS-master/Tests/Test Broker/: conftest.py  test_broker.py
QAOMS-master/src/: nav_monitor.py  requirements.txt
QAOMS-master/src/Help Files/: QuantAlpha OMS Help Documentation.hnd
QAOMS-master/src/globals/: log_setup.py  trading.py
QAOMS-master/src/trading_objects/: account.py  strategy.py
Tests/: conftest.py  ini.txt  test_config_file_import.py  test_order_file_handler.py
Tests/Test_Kit/Test Data/: orders_file.csv
Tests/legacytests/: conftest.py
Tests/test_api/general/: test_client.py  (+1 more)
Tests/test_nav/: test_nav.py
src/: broker.py  gui.py  ib_api.py  markets.py  oms.py  order_file_handler.py  orders.py  requirements.txt  trades.py
src/account/: account.py  account_v2.py  nav_monitor.py  test_account_v2.py
src/algoterminal.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/broker/: broker.py
src/client/: broker.py
src/email/: README
src/globals/: config.py  email_manager.py  signals.py
src/gui/: gui.py  splash_screen.py
src/ib_api/: ib_api.py
src/markets/: markets.py
src/oms/: oms.py
src/parser/: readme.md
src/trades/: trades.py
src/trading_objects/: raw_orders.py
src/utils/: utilities.py
(+66 files in other folders)
